[package]
name = "rust_text_editor"
version = "0.1.2"
authors = ["dhi13man <furyx.ds@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Dhi13man/rust_text_editor"

[dependencies]
log = "0.4"

tui-logger = "0.8.0"
tui = "0.18.0"

crossterm = "0.24.0"
tokio = { version = "1", features = ["full"] }

eyre = "0.6"